2018-02-20  Karl Berry  <karl@freefriends.org>

	* progname.c (expand_symlinks): make error message on unresolvable
	symlinks less verbose.
	(kpathsea_selfdir): exit(1) if name cannot be resolved,
	instead of failing an assertion. Report from Enrico Gregorio,
	http://tug.org/pipermail/tex-live/2018-February/041052.html

2018-02-17  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* texmf.cnf ({TEXINPUTS,BIBINPUTS,max_strings}.upbibtex):
	add defns for upbibtex.

2018-02-10  Karl Berry  <karl@freefriends.org>

	* doc/kpathsea.texi (Path searching options): clarify that
	--no-casefold-search doesn't mean the underlying (file)system
	magically becomes case-sensitive.

2018-02-07  Karl Berry  <karl@freefriends.org>

	* tests/kpsewhich.test: don't run --no-casefold-search with
	"Plain.TeX", since it succeeds on case-insensitive systems
	and fails on case-sensitive ones.

2018-02-04  Karl Berry  <karl@freefriends.org>

	* texmf.cnf (texmf_casefold_search): new configuration value
	for Unix, default 1. Latest thread about this longstanding issue:
	http://tug.org/pipermail/tex-live/2017-September/040619.html

	* version.ac: move to 6.3.0 since I guess this is a new
	(compatible [enough]) interface.
	* NEWS: mention it.
	* doc/kpathsea.texi: document it.
	(Casefolding search),
	(Casefolding rationale),
	(Casefolding examples): new nodes.
	(Path searching options): new option [-no]-casefold-search
	for kpsewhich.

	* pathsearch.c (KPSE_CASEFOLDING_SEARCH): new compile-time macro
	to support case-insensitive searches on case-sensitive operating
	systems, that is, not Windows. Most other changes here are
	conditional on it.

	(print_space_list): helper fn for debugging output.
	(readable_file_fn_type): new typedef for casefold_readable_file
	and kpathsea_readable_file.
	(casefold_readable_file): new fn to check for a file ignoring case.
	(dir_list_search),
	(dir_list_search_list): take an additional function pointer argument
	and call it, instead of only kpathsea_readable_file. Return